docs(v2.7): close Phase 0 baseline narrative for main merge
Co-authored-by: Cursor <cursoragent@cursor.com>